--- a/src/app/admin/map-creation/map-creation.component.css
+++ b/src/app/admin/map-creation/map-creation.component.css
@@ -1,3 +1,14 @@
-mat-card {
-  max-width: 400px;
+app-admin-settings {
+  float: right;
+  margin: 1em;
+}
+
+#container {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+
+#stage {
+  background: rgb(223, 223, 223);
 }
