--- a/src/app/admin/admin-settings/admin-settings.component.css
+++ b/src/app/admin/admin-settings/admin-settings.component.css
@@ -1,3 +1,15 @@
 .icon-button {
   cursor: pointer;
 }
+
+mat-card.hidden-card {
+  padding: 0;
+
+}
+
+mat-card-title button {
+  top: -4px;
+  width: 24px;
+  height: 24px;
+  line-height: 24px;
+}
