--- a/src/app/admin/dashboard/dashboard.component.html
+++ b/src/app/admin/dashboard/dashboard.component.html
@@ -1,6 +1,6 @@
 <app-admin-page>
   <section>
-    <mat-card class="example-card">
+    <mat-card class="carousel">
       <mat-card-header>
         <mat-card-title>Create new map</mat-card-title>
       </mat-card-header>
